fixed minor spacing; added lorem ipsum for mission statement section

--- a/public_html/code/css/styles.css
+++ b/public_html/code/css/styles.css
@@ -22,5 +22,11 @@ body{
 }
 
 img {
-	max-height: 4em;
+	height: 4em;
+	margin: auto;
 }
+
+#mission {
+	background-color: #7AFFF8;
+}
+
